# LangChainLearning

./: .gitignore  README.md  app.py  ice_breaker.py  ingestion.py  main.py  pyproject.toml
backend/: core.py
icebreaker/: ice_breaker.py  output_parsers.py
icebreaker/agents/: linkedin_lookup_agent.py
langchain-docs/: download_docs.py
play/mediumblogs/: main.py  mediumblog1.txt
play/vectorstore-memory/: main.py
third_parties/: linkedin.json  linkedin.py
tools/: tools.py
